--- a/personal-website-dark-light-mode/index.html
+++ b/personal-website-dark-light-mode/index.html
@@ -10,6 +10,8 @@
       rel="stylesheet"
       href="https://unicons.iconscout.com/release/v4.0.0/css/line.css"
     />
+    <!-- SWIPER CSS -->
+    <link rel="stylesheet" href="assets/css//swiper-bundle.min.css" />
     <!--  CSS -->
     <link rel="stylesheet" href="assets/css/styles.css" />
     <title>Responsive Portfolio Website</title>
@@ -488,8 +490,456 @@
           </div>
         </div>
       </section>
-      <!-- SERVICE -->
+      <!-- SERVICES -->
+      <section class="services section" id="services">
+        <h2 class="section__title">Services</h2>
+        <span class="section__subtitle">What i offer</span>
+
+        <div class="services__container container grid">
+          <!-- SERVICES 1 -->
+          <div class="services__content">
+            <div>
+              <i class="uil uil-web-grid services__icon"></i>
+              <h3 class="services__title">
+                Ui/Ux <br />
+                Designer
+              </h3>
+            </div>
+
+            <span
+              class="button button--flex button--small button--link services__button"
+            >
+              View More <i class="uil uil-arrow-right button__icon"></i>
+            </span>
+
+            <div class="services__model">
+              <div class="services__model-content">
+                <h4 class="services__model-title">
+                  Ui/Ux <br />
+                  Designer
+                </h4>
+                <i class="uil uil-times services__model-close"></i>
+
+                <ul class="services__model-services grid">
+                  <li class="services__model-service">
+                    <i class="uil uil-check-circle services__model-icon"></i>
+                    <p>I develop the user interface.</p>
+                  </li>
+                  <li class="services__model-service">
+                    <i class="uil uil-check-circle services__model-icon"></i>
+                    <p>Web page development.</p>
+                  </li>
+                  <li class="services__model-service">
+                    <i class="uil uil-check-circle services__model-icon"></i>
+                    <p>I create ux element interactions.</p>
+                  </li>
+                  <li class="services__model-service">
+                    <i class="uil uil-check-circle services__model-icon"></i>
+                    <p>I position your company brand.</p>
+                  </li>
+                </ul>
+              </div>
+            </div>
+          </div>
+          <!-- SERVICES 2 -->
+          <div class="services__content">
+            <div>
+              <i class="uil uil-arrow services__icon"></i>
+              <h3 class="services__title">
+                Frontend <br />
+                Developer
+              </h3>
+            </div>
+
+            <span
+              class="button button--flex button--small button--link services__button"
+            >
+              View More <i class="uil uil-arrow-right button__icon"></i>
+            </span>
+
+            <div class="services__model">
+              <div class="services__model-content">
+                <h4 class="services__model-title">
+                  Frontend <br />
+                  Developer
+                </h4>
+                <i class="uil uil-times services__model-close"></i>
+
+                <ul class="services__model-services grid">
+                  <li class="services__model-service">
+                    <i class="uil uil-check-circle services__model-icon"></i>
+                    <p>I develop the user interface.</p>
+                  </li>
+                  <li class="services__model-service">
+                    <i class="uil uil-check-circle services__model-icon"></i>
+                    <p>Web page development.</p>
+                  </li>
+                  <li class="services__model-service">
+                    <i class="uil uil-check-circle services__model-icon"></i>
+                    <p>I create ux element interactions.</p>
+                  </li>
+                  <li class="services__model-service">
+                    <i class="uil uil-check-circle services__model-icon"></i>
+                    <p>I position your company brand.</p>
+                  </li>
+                </ul>
+              </div>
+            </div>
+          </div>
+          <!-- SERVICES 3 -->
+          <div class="services__content">
+            <div>
+              <i class="uil uil-pen services__icon"></i>
+              <h3 class="services__title">
+                Branding <br />
+                Designer
+              </h3>
+            </div>
+
+            <span
+              class="button button--flex button--small button--link services__button"
+            >
+              View More <i class="uil uil-arrow-right button__icon"></i>
+            </span>
+
+            <div class="services__model">
+              <div class="services__model-content">
+                <h4 class="services__model-title">
+                  Branding <br />
+                  Designer
+                </h4>
+                <i class="uil uil-times services__model-close"></i>
+
+                <ul class="services__model-services grid">
+                  <li class="services__model-service">
+                    <i class="uil uil-check-circle services__model-icon"></i>
+                    <p>I develop the user interface.</p>
+                  </li>
+                  <li class="services__model-service">
+                    <i class="uil uil-check-circle services__model-icon"></i>
+                    <p>Web page development.</p>
+                  </li>
+                  <li class="services__model-service">
+                    <i class="uil uil-check-circle services__model-icon"></i>
+                    <p>I create ux element interactions.</p>
+                  </li>
+                  <li class="services__model-service">
+                    <i class="uil uil-check-circle services__model-icon"></i>
+                    <p>I position your company brand.</p>
+                  </li>
+                </ul>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+
+      <!-- PORTFOLIO -->
+      <section class="portfolio section" id="portfolio">
+        <h2 class="section__title">Portfolio</h2>
+        <span class="section__subtitle">Most recent work</span>
+
+        <div class="portfolio__container container swiper-container">
+          <div class="swiper-wrapper">
+            <!-- PORTFOLIO 1 -->
+            <div class="portfolio__content grid swiper-slide">
+              <img
+                src="assets/img//portfolio1.jpg"
+                alt=""
+                class="portfolio__img"
+              />
+              <div class="portfolio__data">
+                <h3 class="portfolio__title">Modern Website</h3>
+                <p class="portfolio__description">
+                  Website adaptable to all devices, with ui components and
+                  animated interactions.
+                </p>
+
+                <a
+                  href=""
+                  class="button button--flex button--small portfolio__button"
+                >
+                  Demo
+                  <i class="uil uil-arrow-right button__icon"></i>
+                </a>
+              </div>
+            </div>
+            <!-- PORTFOLIO 2 -->
+            <div class="portfolio__content grid swiper-slide">
+              <img
+                src="assets/img//portfolio2.jpg"
+                alt=""
+                class="portfolio__img"
+              />
+              <div class="portfolio__data">
+                <h3 class="portfolio__title">Brand Design</h3>
+                <p class="portfolio__description">
+                  Website adaptable to all devices, with ui components and
+                  animated interactions.
+                </p>
+
+                <a
+                  href=""
+                  class="button button--flex button--small portfolio__button"
+                >
+                  Demo
+                  <i class="uil uil-arrow-right button__icon"></i>
+                </a>
+              </div>
+            </div>
+            <!-- PORTFOLIO 3 -->
+            <div class="portfolio__content grid swiper-slide">
+              <img
+                src="assets/img//portfolio3.jpg"
+                alt=""
+                class="portfolio__img"
+              />
+              <div class="portfolio__data">
+                <h3 class="portfolio__title">Online Store</h3>
+                <p class="portfolio__description">
+                  Website adaptable to all devices, with ui components and
+                  animated interactions.
+                </p>
+
+                <a
+                  href=""
+                  class="button button--flex button--small portfolio__button"
+                >
+                  Demo
+                  <i class="uil uil-arrow-right button__icon"></i>
+                </a>
+              </div>
+            </div>
+          </div>
+          <!-- Add Arrows -->
+          <div class="swiper-button-next">
+            <i class="uil uil-angle-right-b swiper-portfolio-icon"></i>
+          </div>
+          <div class="swiper-button-prev">
+            <i class="uil uil-angle-left-b swiper-portfolio-icon"></i>
+          </div>
+
+          <!-- Add Pagination -->
+          <div class="swiper-pagination"></div>
+        </div>
+      </section>
+
+      <!-- PROJECT IN MIND -->
+      <section class="project section">
+        <div class="project__bg">
+          <div class="project__container container grid">
+            <div class="project__data">
+              <h2 class="project__title">You have a new project</h2>
+              <p class="project__description">
+                Contact me now and get a 30% discount on your new project.
+              </p>
+              <a href="#" class="button button--flex button--white">
+                Contact Me
+                <i class="uil uil-message project__icon button__icon"></i>
+              </a>
+            </div>
+
+            <img src="assets/img//project.png" alt="" class="project__img" />
+          </div>
+        </div>
+      </section>
+
+      <!-- TESTIMONIAL -->
+      <section class="testimonial section">
+        <h2 class="section__title">Testimonial</h2>
+        <span class="section__subtitle">My client saying</span>
+        <div class="testimonial__container container swiper-container">
+          <div class="swiper-wrapper">
+            <!-- TESTIMONIAL 1 -->
+            <div class="testimonial__content swiper-slide">
+              <div class="testimonial__data">
+                <div class="testimonial__header">
+                  <img
+                    src="assets/img//testimonial1.jpg"
+                    alt=""
+                    class="testimonial__img"
+                  />
+
+                  <div>
+                    <h3 class="testimonial__name">Sara Smith</h3>
+                    <span class="testimonial__client">Client</span>
+                  </div>
+                </div>
+                <div>
+                  <i class="uil uil-star testimonial__icon-star"></i>
+                  <i class="uil uil-star testimonial__icon-star"></i>
+                  <i class="uil uil-star testimonial__icon-star"></i>
+                  <i class="uil uil-star testimonial__icon-star"></i>
+                  <i class="uil uil-star testimonial__icon-star"></i>
+                </div>
+              </div>
+              <p class="testimonial__description">
+                I get a good impression, I carry out my project with all the
+                possible quality and attention and support 24 hours a day.
+              </p>
+            </div>
+
+            <!-- TESTIMONIAL 2 -->
+            <div class="testimonial__content swiper-slide">
+              <div class="testimonial__data">
+                <div class="testimonial__header">
+                  <img
+                    src="assets/img//testimonial2.jpg"
+                    alt=""
+                    class="testimonial__img"
+                  />
+
+                  <div>
+                    <h3 class="testimonial__name">Matt Robinson</h3>
+                    <span class="testimonial__client">Client</span>
+                  </div>
+                </div>
+                <div>
+                  <i class="uil uil-star testimonial__icon-star"></i>
+                  <i class="uil uil-star testimonial__icon-star"></i>
+                  <i class="uil uil-star testimonial__icon-star"></i>
+                  <i class="uil uil-star testimonial__icon-star"></i>
+                  <i class="uil uil-star testimonial__icon-star"></i>
+                </div>
+              </div>
+              <p class="testimonial__description">
+                I get a good impression, I carry out my project with all the
+                possible quality and attention and support 24 hours a day.
+              </p>
+            </div>
+
+            <!-- TESTIMONIAL 3 -->
+            <div class="testimonial__content swiper-slide">
+              <div class="testimonial__data">
+                <div class="testimonial__header">
+                  <img
+                    src="assets/img//testimonial3.jpg"
+                    alt=""
+                    class="testimonial__img"
+                  />
+
+                  <div>
+                    <h3 class="testimonial__name">Raul Harries</h3>
+                    <span class="testimonial__client">Client</span>
+                  </div>
+                </div>
+                <div>
+                  <i class="uil uil-star testimonial__icon-star"></i>
+                  <i class="uil uil-star testimonial__icon-star"></i>
+                  <i class="uil uil-star testimonial__icon-star"></i>
+                  <i class="uil uil-star testimonial__icon-star"></i>
+                  <i class="uil uil-star testimonial__icon-star"></i>
+                </div>
+              </div>
+              <p class="testimonial__description">
+                I get a good impression, I carry out my project with all the
+                possible quality and attention and support 24 hours a day.
+              </p>
+            </div>
+          </div>
+          <div class="swiper-pagination swiper-pagination-testimonial"></div>
+        </div>
+      </section>
+
+      <!-- CONTACT ME -->
+      <section class="contact section" id="contact">
+        <h2 class="section__title">Contact Me</h2>
+        <span class="section__subtitle">Get in touch</span>
+
+        <div class="contact__container container grid">
+          <div>
+            <div class="contact__information">
+              <i class="uil uil-phone contact__icon"></i>
+              <div>
+                <h2 class="contact__title">Call Me</h2>
+                <span class="contact__subtitle">999-777-666</span>
+              </div>
+            </div>
+            <div class="contact__information">
+              <i class="uil uil-envelope contact__icon"></i>
+              <div>
+                <h2 class="contact__title">Email</h2>
+                <span class="contact__subtitle">contact@apiwatdev.com</span>
+              </div>
+            </div>
+            <div class="contact__information">
+              <i class="uil uil-map-marker contact__icon"></i>
+              <div>
+                <h2 class="contact__title">Location</h2>
+                <span class="contact__subtitle">Nontaburi - Thailand</span>
+              </div>
+            </div>
+          </div>
+
+          <from class="contact__from grid">
+            <div class="contact__inputs grid">
+              <div class="contact__content">
+                <label for="" class="contact__label">Name</label>
+                <input type="text" class="contact__input" />
+              </div>
+              <div class="contact__content">
+                <label for="" class="contact__label">Email</label>
+                <input type="email" class="contact__input" />
+              </div>
+            </div>
+            <div class="contact__content">
+              <label for="" class="contact__label">Project</label>
+              <input type="text" class="contact__input" />
+            </div>
+            <div class="contact__content">
+              <label for="" class="contact__label">Message</label>
+              <textarea
+                name=""
+                id=""
+                cols="0"
+                rows="7"
+                class="contact__input"
+              ></textarea>
+            </div>
+
+            <div>
+              <a href="#" class="button button--flex">
+                Send Message
+                <i class="uil uil-message button__icon"></i>
+              </a>
+            </div>
+          </from>
+        </div>
+      </section>
+
+      <!-- FOOTER -->
+      <footer class="footer">
+        <div class="footer__bg">
+          <div class="footer__container container grid">
+            <div>
+              <h1 class="footer__title">Apiwat</h1>
+              <span class="footer__subtitle">Frontend developer</span>
+            </div>
+
+            <ul class="footer__links">
+              <li><a href="#services" class="footer__link">Services</a></li>
+              <li><a href="#portfolio" class="footer__link">Portfolio</a></li>
+              <li><a href="#contact" class="footer__link">Contactme</a></li>
+            </ul>
+
+            <div class="footer__socials">
+              <a href="https://www.facebook.com/"target="blank" class="footer__social">
+                <i class="uil uil-facebook-f"></i>
+              </a>
+              <a href="https://www.instagram.com/"target="blank" class="footer__social">
+                <i class="uil uil-instagram"></i>
+              </a>
+              <a href="https://twitter.com/" target="blank"class="footer__social">
+                <i class="uil uil-twitter-alt"></i>
+              </a>
+            </div>
+          </div>
+
+          <p class="footer__copy">&#169; Bedimcode. All right reserved</p>
+        </div>
+      </footer>
     </main>
-    <script src="assets/js//main.js"></script>
+    <script src="assets/js/swiper-bundle.min.js"></script>
+    <script src="assets/js/main.js"></script>
   </body>
 </html>
