--- a/personal-website-dark-light-mode/index.html
+++ b/personal-website-dark-light-mode/index.html
@@ -25,7 +25,7 @@
         <div class="nav__menu" id="nav-menu">
           <ul class="nav__list grid">
             <li class="nav__item">
-              <a href="#home" class="nav__link">
+              <a href="#home" class="nav__link active-link">
                 <i class="uil uil-estate nav__icon"></i> Home
               </a>
             </li>
@@ -69,7 +69,7 @@
     <!-- MAIN JS -->
     <main class="main">
       <!-- HOME -->
-      <scetion class="home section" id="home">
+      <section class="home section" id="home">
         <div class="home__container container grid">
           <div class="home__content grid">
             <div class="home__social">
@@ -145,7 +145,7 @@
             </a>
           </div>
         </div>
-      </scetion>
+      </section>
       <!-- ABOUT -->
       <section class="about section" id="about">
         <h2 class="section__title">About Me</h2>
