--- a/personal-website-dark-light-mode/index.html
+++ b/personal-website-dark-light-mode/index.html
@@ -59,7 +59,8 @@
           <i class="uil uil-times nav__close" id="nav-close"></i>
         </div>
 
-        <div class="nav__btn">
+        <div class="nav__btns">
+          <i class="uil uil-moon change-theme" id="theme-button"></i>
           <div class="nav__toggle" id="nav-toggle">
             <i class="uil uil-apps"></i>
           </div>
@@ -938,6 +939,11 @@
           <p class="footer__copy">&#169; Bedimcode. All right reserved</p>
         </div>
       </footer>
+
+      <!-- SCROLL TOP -->
+      <a href="#" class="scrollup" id='scroll-up'>
+        <i class="uil uil-arrow-up scrollup__icon"></i>
+      </a>
     </main>
     <script src="assets/js/swiper-bundle.min.js"></script>
     <script src="assets/js/main.js"></script>
