--- a/responsive-portfolio-website-ansel/index.html
+++ b/responsive-portfolio-website-ansel/index.html
@@ -570,7 +570,7 @@
         <span class="section__subtitle">Get in touch</span>
         <h2 class="section__title">Contact Me</h2>
 
-        <div class="contact__container container">
+        <div class="contact__container container grid">
           <div class="contact__content">
             <h3 class="contact__title">Talk to me</h3>
             <div class="contact__info">
@@ -699,6 +699,8 @@
       </footer>
     </main>
 
+    <!-- ============== SCROLLREVEAL =========-->
+    <script src="assets/js//scrollreveal.min.js"></script>
     <!-- ============== SWIPER JS ============ -->
     <script src="assets/js/swiper-bundle.min.js"></script>
     <!-- ============== MIXITUP FILTER ======= -->
